History
=======

Version 0.8.17 - Unreleased
---------------------------

- When no address has been selected for sending the preview to, inform
  the user instead of sending the preview to *all* subscribers.
  Fixes https://bugs.launchpad.net/singing-dancing/+bug/509577
  [maurits]

- When compactifying the sent html with stoneagehtml catch an error that
  can occur with some css code, that stoneagehtml tries to clean up
  using cssutils.
  Fixes https://bugs.launchpad.net/singing-dancing/+bug/410238
  [maurits]

- Changed all occurences of site-title to site_title (in help strings
  and translations).
  Fixes https://bugs.launchpad.net/singing-dancing/+bug/296759
  [maurits]

- We now avoid including all zcml from five.intid (in the same way as e.g.
  plone.app.intid) This means we avoid registering the IPersistent handlers,
  which (among other issues) can cause problems for packages that put persistent
  items in temporary storage. Instead we explicitly register handlers for
  ISubscription. The issue is discussed here:
  http://www.mail-archive.com/zodb-dev@zope.org/msg04398.html
  And at length, as pertaining to the getpaid package, here:
  http://code.google.com/p/getpaid/issues/detail?id=209.
  [tmog]

- Reverted changeset 113529 since it broke subscriber searching (and tests).
  The revert has likely reintroduced a problem with deleting subscriptions,
  but I've been unable to reproduce this.
  [tmog]
  
- When importing email addresses, convert all addresses to lowercase
  instead of rejecting them.
  [maurits]

- Update french translation
  [toutpt]

Version 0.8.16 - 2010-04-07
---------------------------

- Fixed translations that were causing compile errors on Zope startup,
  resulting in old translations showing up for a language (taken from
  the outdated .mo file), or no translations at all.
  [maurits]

- Updated Dutch translations.
  [maurits]
  
- Fixed a bug that made it impossible to delete some subscriptions.
  [regebro]
